--- a/index.html
+++ b/index.html
@@ -1,63 +1,153 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Random Number and Color</title>
   <style>
-    body {
-      font-size: 60vw;
-      font-weight: bold;
-      font-family: sans-serif;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      color: white;
-    }
-    .green {
-      background-color: green;
-    }
-    .red {
-      background-color: red;
-    }
-    .blue {
-      background-color: blue;
-    }
-    .orange {
-      background-color: orange;
-    }
-    #countdown {
-      font-size: 5vw;
-    }
-  </style>
+      body {
+        font-size: 40vw;
+        font-weight: bold;
+        font-family: sans-serif;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        color: white;
+      }
+      .green {
+        background-color: green;
+      }
+      .red {
+        background-color: red;
+      }
+      .blue {
+        background-color: blue;
+      }
+      .orange {
+        background-color: orange;
+      }
+      #countdown {
+        font-size: 5vw;
+      }
+
+      @media screen and (max-width: 768px) {
+        body {
+          font-size: 70vw;
+        }
+      }
+
+      @media screen and (min-width: 769px) {
+        body {
+          font-size: 50vw;
+        }
+      }
+    </style>
 </head>
 <body>
-  <div id="output"></div>
-  <div id="countdown"></div>
-  <script>
-    var timeLeft = 5;
+<div id="output"></div>
+<div id="countdown"></div>
+<script>
+      var timeLeft = 5;
 
-    function displayNumberAndColor() {
-      var number = Math.floor(Math.random() * 5) + 1;
-      var colors = ['green', 'red', 'blue', 'orange'];
-      var color = colors[Math.floor(Math.random() * colors.length)];
-      document.body.className = color;
-      document.getElementById('output').innerHTML = number;
-    }
-
-    function countdown() {
-      if (timeLeft == 0) {
-        timeLeft = 5;
-        displayNumberAndColor();
-      } else {
-        document.getElementById("countdown").innerHTML = timeLeft + " seconds";
-        timeLeft--;
+      function displayNumberAndColor() {
+        var number = Math.floor(Math.random() * 5) + 1;
+        var colors = ['green', 'red', 'blue', 'orange'];
+        var color = colors[Math.floor(Math.random() * colors.length)];
+        document.body.className = color;
+        document.getElementById('output').innerHTML = number;
       }
-    }
 
-    displayNumberAndColor(); // Display the initial number and color on page load
-    setInterval(countdown, 1000);
-  </script>
+      function countdown() {
+        if (timeLeft == 0) {
+          timeLeft = 5;
+          displayNumberAndColor();
+        } else {
+          document.getElementById("countdown").innerHTML = timeLeft + " seconds";
+          timeLeft--;
+        }
+
+  }
+
+  displayNumberAndColor(); // Display the initial number and color on page load
+  setInterval(countdown, 1000);
+</script>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Random Number and Color</title>
+  <style>
+      body {
+        font-size: 40vw;
+        font-weight: bold;
+        font-family: sans-serif;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        color: white;
+      }
+      .green {
+        background-color: green;
+      }
+      .red {
+        background-color: red;
+      }
+      .blue {
+        background-color: blue;
+      }
+      .orange {
+        background-color: orange;
+      }
+      #countdown {
+        font-size: 5vw;
+      }
+
+      @media screen and (max-width: 768px) {
+        body {
+          font-size: 70vw;
+        }
+      }
+
+      @media screen and (min-width: 769px) {
+        body {
+          font-size: 50vw;
+        }
+      }
+    </style>
+</head>
+<body>
+<div id="output"></div>
+<div id="countdown"></div>
+<script>
+      var timeLeft = 5;
+
+      function displayNumberAndColor() {
+        var number = Math.floor(Math.random() * 5) + 1;
+        var colors = ['green', 'red', 'blue', 'orange'];
+        var color = colors[Math.floor(Math.random() * colors.length)];
+        document.body.className = color;
+        document.getElementById('output').innerHTML = number;
+      }
+
+      function countdown() {
+        if (timeLeft == 0) {
+          timeLeft = 5;
+          displayNumberAndColor();
+        } else {
+          document.getElementById("countdown").innerHTML = timeLeft + " seconds";
+          timeLeft--;
+        }
+
+  }
+
+  displayNumberAndColor(); // Display the initial number and color on page load
+  setInterval(countdown, 1000);
+</script>
 </body>
 </html>
