--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Random Number and Color</title>
   <style>
       body {
-        font-size: 40vw;
+        font-size: 40vh;
         font-weight: bold;
         font-family: sans-serif;
         text-align: center;
@@ -29,18 +29,18 @@
         background-color: orange;
       }
       #countdown {
-        font-size: 5vw;
+        font-size: 5vh;
       }
 
       @media screen and (max-width: 768px) {
         body {
-          font-size: 70vw;
+          font-size: 70vh;
         }
       }
 
       @media screen and (min-width: 769px) {
         body {
-          font-size: 50vw;
+          font-size: 50vh;
         }
       }
     </style>
@@ -81,7 +81,7 @@
   <title>Random Number and Color</title>
   <style>
       body {
-        font-size: 40vw;
+        font-size: 70vh;
         font-weight: bold;
         font-family: sans-serif;
         text-align: center;
@@ -105,18 +105,18 @@
         background-color: orange;
       }
       #countdown {
-        font-size: 5vw;
+        font-size: 5vh;
       }
 
       @media screen and (max-width: 768px) {
         body {
-          font-size: 70vw;
+          font-size: 80vh;
         }
       }
 
       @media screen and (min-width: 769px) {
         body {
-          font-size: 50vw;
+          font-size: 80vh;
         }
       }
     </style>
