--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <span class="slider-value" id="number-range-value">1-5</span>
     </div>
   </div>
+
+  <div class="color-options">
+    <label><input type="checkbox" id="green-checkbox">Green</label>
+    <label><input type="checkbox" id="red-checkbox">Red</label>
+    <label><input type="checkbox" id="blue-checkbox">Blue</label>
+    <label><input type="checkbox" id="orange-checkbox">Orange</label>
+  </div>
+
 </div>
 <div id="output"></div>
 <div id="countdown"></div>
